--- a/srbase/templates/srbase/profile.html
+++ b/srbase/templates/srbase/profile.html
@@ -33,7 +33,7 @@
 
         <div class="roomList__header">
           <div>
-            <h2>Repositories Created by {{user.userna}}</a>
+            <h2>Repositories Created by {{user.username}}</a>
             </h2>
           </div>
         </div>
