--- a/srbase/templates/srbase/browse.html
+++ b/srbase/templates/srbase/browse.html
@@ -13,7 +13,10 @@
 
     <div class="activities__box">
       
-      
+      <div class="activities__boxContent">
+        <h1> <a href = "{% url 'send_mail_plain_with_file' %}">Submit</a></h1>
+        
+      </div>
     </div>
    
       <div class="activities__box">
