--- a/srbase/templates/srbase/submit.html
+++ b/srbase/templates/srbase/submit.html
@@ -2,42 +2,71 @@
 
 {% block content %}
 
-<div class="col-lg-4 block border">
-    <form action="/send_mail_plain_with_file" method="post
-    " enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="form-group">
+
+<main class="create-room layout">
+  <div class="container">
+    <div class="layout__box">
+      <div class="layout__boxHeader">
+        <div class="layout__boxTitle">
+          <a href="{{request.META.HTTP_REFERER}}">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+              <title>arrow-left</title>
+              <path
+                d="M13.723 2.286l-13.723 13.714 13.719 13.714 1.616-1.611-10.96-10.96h27.625v-2.286h-27.625l10.965-10.965-1.616-1.607z">
+              </path>
+            </svg>
+          </a>
+          <h3>Create/Update Sbmission</h3>
+        </div>
+      </div>
+      <div class="layout__body">
+        <form action="/send_mail_plain_with_file" method="post
+        " enctype="multipart/form-data">
+          {% csrf_token %}
+
+          <div class="form__group">
             <label class ="control-label">
                 Email:
             </label>
             <input type="text" name="email" class="form-control">
+          </div>
 
-        </div>
-        <div class="form-group">
+
+
+          <div class="form__group">
             <label class ="control-label">
                 Subject:
             </label>
             <input type="text" name="subject" class="form-control">
 
-        </div>
-        <div class="form-group">
+          </div>
+          
+
+          <div class="form__group">
             <label class ="control-label">
                 Message:
             </label>
             <textarea name="message" class="form-control"  rows="5"></textarea>
-
-        </div>
-        <div class="form-group">
+          </div>
+          <div class="form__group">
             <label class ="control-label">
                 File:
             </label>
             <input type="file" id="file" name="file">
-
-        </div>
-        <input type="submit" value="submit">
-    
-    </form>
-</div>
+          </div>
 
 
-{% endblock content%}
+
+          <div class="form__action">
+            <a class="btn btn--dark" href="{{request.META.HTTP_REFERER}}">Cancel</a>
+            <button class="btn btn--main" type="submit">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</main>
+{% endblock content %}
+
+
+
