--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
   <div class="container">
     <a href="{% url 'home' %}" class="header__logo">
       <img src="{% static 'images/logo.jpg'%}" />
-      <h1>SR System</h1>
+      <h1>TUDARCO SUBMISSION AND REPOSITORY SYSTEM</h1>
     </a>
     <form class="header__search" method="GET" action="{% url 'home'%}">
       <label>
